--- a/index.html
+++ b/index.html
@@ -6,153 +6,61 @@
   <title>اعرف قبضك</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet" />
   <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Cairo', sans-serif;
-    }
-
+    * { box-sizing: border-box; font-family: 'Cairo', sans-serif; }
     body {
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
+      margin: 0; padding: 0; min-height: 100vh;
       background: radial-gradient(circle at top, #000000, #111827, #000);
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
+      color: #fff; display: flex; flex-direction: column; align-items: center; justify-content: flex-start;
       overflow-x: hidden;
     }
-
     h1 {
-      margin-top: 40px;
-      font-size: 3rem;
-      font-weight: bold;
+      margin-top: 40px; font-size: 3rem; font-weight: bold;
       background: linear-gradient(90deg, #00b7ff, #38bdf8, #fff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+      -webkit-background-clip: text; -webkit-text-fill-color: transparent;
       text-shadow: 0 0 20px #00b7ff80;
       animation: glow 3s infinite alternate;
     }
-
-    @keyframes glow {
-      0% { text-shadow: 0 0 10px #00b7ff; }
-      100% { text-shadow: 0 0 30px #38bdf8; }
-    }
+    @keyframes glow { 0% { text-shadow: 0 0 10px #00b7ff; } 100% { text-shadow: 0 0 30px #38bdf8; } }
 
     .container {
-      background: rgba(255,255,255,0.05);
-      backdrop-filter: blur(15px);
-      border-radius: 25px;
-      border: 2px solid #38bdf880;
-      box-shadow: 0 0 30px #00b7ff33;
-      padding: 40px 25px;
-      width: 90%;
-      max-width: 600px;
-      margin-top: 30px;
+      background: rgba(255,255,255,0.05); backdrop-filter: blur(15px);
+      border-radius: 25px; border: 2px solid #38bdf880;
+      box-shadow: 0 0 30px #00b7ff33; padding: 40px 25px;
+      width: 90%; max-width: 600px; margin-top: 30px;
       animation: fadeIn 0.8s ease-in-out;
     }
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    label {
-      font-size: 1.4rem;
-      font-weight: 700;
-      display: block;
-      margin-bottom: 14px;
-      color: #fff;
-      text-align: center;
-    }
-
+    label { font-size: 1.4rem; font-weight: 700; display: block; margin-bottom: 14px; color: #fff; text-align: center; }
     input {
-      width: 100%;
-      padding: 18px;
-      border-radius: 16px;
-      border: 2px solid #00b7ff;
-      font-size: 1.4rem;
-      text-align: center;
-      color: #111;
-      background: #f8fafc;
-      margin-bottom: 16px;
-      transition: 0.3s;
-      box-shadow: 0 0 15px #00b7ff55;
+      width: 100%; padding: 18px; border-radius: 16px; border: 2px solid #00b7ff;
+      font-size: 1.4rem; text-align: center; color: #111; background: #f8fafc;
+      margin-bottom: 16px; transition: 0.3s; box-shadow: 0 0 15px #00b7ff55;
     }
-
-    input:focus {
-      outline: none;
-      border-color: #38bdf8;
-      box-shadow: 0 0 25px #38bdf888;
-    }
-
+    input:focus { outline: none; border-color: #38bdf8; box-shadow: 0 0 25px #38bdf888; }
     button {
-      width: 100%;
-      background: linear-gradient(90deg, #00b7ff, #38bdf8);
-      color: white;
-      border: none;
-      padding: 16px;
-      font-size: 1.3rem;
-      font-weight: bold;
-      border-radius: 14px;
-      cursor: pointer;
-      transition: 0.3s;
+      width: 100%; background: linear-gradient(90deg, #00b7ff, #38bdf8);
+      color: white; border: none; padding: 16px; font-size: 1.3rem; font-weight: bold; border-radius: 14px;
+      cursor: pointer; transition: 0.3s;
+    }
+    button:hover { transform: scale(1.05); box-shadow: 0 0 15px #38bdf8aa; }
+    .signature-top {
+      margin-top: 12px; font-size: 1rem; color: #d1e9ff; font-weight: 600; font-style: italic; text-align: center;
     }
 
-    button:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 15px #38bdf8aa;
-    }
-
-    #result {
-      margin-top: 25px;
-      display: none;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: separate;
-      border-spacing: 0 8px;
-      font-size: 1.3rem;
-    }
-
-    td {
-      padding: 12px 10px;
-      border-radius: 10px;
-      background: rgba(255, 255, 255, 0.08);
-      color: #fff;
-    }
-
+    #result { margin-top: 25px; display: none; }
+    table { width: 100%; border-collapse: separate; border-spacing: 0 8px; font-size: 1.3rem; }
+    td { padding: 12px 10px; border-radius: 10px; background: rgba(255, 255, 255, 0.08); color: #fff; vertical-align: top; }
     .salary-card.not-found {
-      text-align: center;
-      background: rgba(255, 0, 0, 0.2);
-      padding: 20px;
-      border-radius: 12px;
-      font-size: 1.3rem;
+      text-align: center; background: rgba(255, 0, 0, 0.2); padding: 20px; border-radius: 12px; font-size: 1.3rem;
     }
 
-    .net-box {
-      margin-top: 35px;
-      text-align: center;
-    }
-
+    .net-box { margin-top: 35px; text-align: center; }
     .net-value {
-      background: linear-gradient(90deg, #0077ff, #00b7ff);
-      color: #fff;
-      font-size: 2.7rem;
-      font-weight: 900;
-      border-radius: 20px;
-      padding: 25px 0;
-      box-shadow: 0 0 25px #00b7ffaa;
+      background: linear-gradient(90deg, #0077ff, #00b7ff); color: #fff; font-size: 2.7rem; font-weight: 900;
+      border-radius: 20px; padding: 25px 0; box-shadow: 0 0 25px #00b7ffaa;
     }
-
-    .net-label {
-      margin-top: 12px;
-      color: #b7e3ff;
-      font-size: 1.3rem;
-      font-weight: 700;
-    }
+    .net-label { margin-top: 12px; color: #b7e3ff; font-size: 1.3rem; font-weight: 700; }
   </style>
 </head>
 <body>
@@ -161,6 +69,7 @@
     <label for="riderId">ادخل Rider ID:</label>
     <input type="text" id="riderId" placeholder="اكتب رقم الطيار هنا" />
     <button onclick="showSalary()">عرض التفاصيل</button>
+    <div class="signature-top">Best regards, Rami Naseem</div>
     <div id="result"></div>
   </div>
 
@@ -194,23 +103,24 @@
           if (key !== "Net Salary" && key !== "صافي القبض" && key !== "Rider ID") {
             let isNumber = /^-?\d+(\.\d+)?$/.test(value);
 
-            // ✅ إزالة "جنيه" من الأوردرات والساعات
+            // ✅ إزالة كلمة "جنيه" تمامًا من "اجمالي عدد ساعات"
             let showCurrency = isNumber &&
-              key !== "اجمالي عدد الاوردرات من اول الشهر" &&
-              key !== "اجمالي عدد ساعات";
+              key.toLowerCase() !== "اجمالي عدد ساعات" &&
+              key !== "اجمالي عدد الاوردرات من اول الشهر";
 
-            // ✅ تلوين "تسوية" حسب السالب أو الموجب
             let color = "#9ae7ff";
-            if (key.includes("تسويه") || key.includes("تسوية")) {
-              if (parseFloat(value) < 0) color = "#00ff88"; // أخضر للسالب
-              else if (parseFloat(value) > 0) color = "#ff4444"; // أحمر للموجب
+            let warningText = "";
+
+            if (key.toLowerCase().includes("عجز") && !key.toLowerCase().includes("قديم")) {
+              color = "#ff4444";
+              warningText = " - سيقوم المسؤول عنك بالمطالبه بهذه المبلغ .. يرجي تسديده في اسرع وقت لتفادي اي اجراءات قانونية";
             }
 
             detailsHtml += `
               <tr>
                 <td>${key}</td>
                 <td style='text-align:left; color:${color}; font-weight:900;'>
-                  ${value} ${showCurrency ? "جنيه" : ""}
+                  ${value}${showCurrency ? " جنيه" : ""}${warningText}
                 </td>
               </tr>`;
           }
@@ -218,7 +128,6 @@
         detailsHtml += "</table>";
 
         const netValue = salaries[id]["Net Salary"] || salaries[id]["صافي القبض"] || "غير متاح";
-
         detailsHtml += `
           <div class="net-box">
             <div class="net-value">${netValue} جنيه</div>
@@ -228,8 +137,7 @@
         resultDiv.innerHTML = detailsHtml;
         resultDiv.style.display = "block";
       } else {
-        resultDiv.innerHTML =
-          "<div class='salary-card not-found'>❌ لا يوجد بيانات لهذا Rider ID</div>";
+        resultDiv.innerHTML = "<div class='salary-card not-found'>❌ لا يوجد بيانات لهذا Rider ID</div>";
         resultDiv.style.display = "block";
       }
     }
